<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>si.fri.rso.samples</groupId>
    <artifactId>product-catalog</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <modules>
        <module>api</module>
        <module>services</module>
        <module>models</module>
        <module>lib</module>
    </modules>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <kumuluzee.version>4.1.0</kumuluzee.version>
        <kumuluzee-rest.version>1.5.1</kumuluzee-rest.version>
        <kumuluzee-openapi-mp.version>1.4.0</kumuluzee-openapi-mp.version>
        <kumuluzee-config-mp.version>2.0.0</kumuluzee-config-mp.version>
        <kumuluzee-config.version>1.3.0</kumuluzee-config.version>
        <kumuluzee-health.version>2.4.4</kumuluzee-health.version>
        <postgresql.version>42.5.0</postgresql.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kumuluz.ee</groupId>
                <artifactId>kumuluzee-bom</artifactId>
                <version>${kumuluzee.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.kumuluz.ee.rest</groupId>
                <artifactId>kumuluzee-rest-core</artifactId>
                <version>${kumuluzee-rest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.parboiled</groupId>
                <artifactId>parboiled-java</artifactId>
                <version>1.4.1</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.openapi</groupId>
                <artifactId>kumuluzee-openapi-mp</artifactId>
                <version>${kumuluzee-openapi-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.openapi</groupId>
                <artifactId>kumuluzee-openapi-mp-ui</artifactId>
                <version>${kumuluzee-openapi-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.config</groupId>
                <artifactId>kumuluzee-config-mp</artifactId>
                <version>${kumuluzee-config-mp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kumuluz.ee.config</groupId>
                <artifactId>kumuluzee-config-consul</artifactId>
                <version>${kumuluzee-config.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.health</groupId>
                <artifactId>kumuluzee-health</artifactId>
                <version>${kumuluzee-health.version}</version>
            </dependency>

            <dependency>
                <groupId>si.fri.rso.samples</groupId>
                <artifactId>product-catalog-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>si.fri.rso.samples</groupId>
                <artifactId>product-catalog-models</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>si.fri.rso.samples</groupId>
                <artifactId>product-catalog-services</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>si.fri.rso.samples</groupId>
                <artifactId>product-catalog-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
